--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-app.js"></script>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -39,5 +41,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-app.js";
+      const firebaseConfig = {
+        apiKey: "AIzaSyA-YjIpkKDVLA66XsRTvDajChLPeG1FVEw",
+        authDomain: "vendor-dev-a8bda.firebaseapp.com",
+        projectId: "vendor-dev-a8bda",
+        storageBucket: "vendor-dev-a8bda.appspot.com",
+        messagingSenderId: "879111240156",
+        appId: "1:879111240156:web:4b54516b48588724c03719",
+        measurementId: "G-JYL2W2STP1",
+      };
+      const app = initializeApp(firebaseConfig); -->
+    </script>
   </body>
 </html>
